# duatic_dynaarm_driver

./: CHANGELOG.rst  LICENSE  README.md  repos.list
.github/workflows/: build-humble.yml  build-kilted.yml  build-rolling.yml  pre-commit.yml  reusable_ici.yml
doc/: drive_configuration.md
doc/controllers/: dynaarm_pid_tuner.md  dynaarm_status_broadcaster.md  freedrive_controller.md  freeze_controller.md  gravity_compensation_controller.md
duatic_dynaarm_controllers/: CMakeLists.txt  controller_interface_plugin.xml  package.xml
duatic_dynaarm_controllers/include/duatic_dynaarm_controllers/: cartesian_pose_controller.hpp  dynaarm_pid_tuner.hpp  dynaarm_status_broadcaster.hpp  exceptions.hpp  force_torque_broadcaster.hpp  freedrive_controller.hpp  freeze_controller.hpp  gravity_compensation_controller.hpp  interface_utils.hpp  ros2_control_compat.hpp  safety_monitor_controller.hpp
duatic_dynaarm_controllers/src/: cartesian_pose_controller.cpp  cartesian_pose_controller_parameters.yaml  dynaarm_pid_tuner.cpp  dynaarm_pid_tuner_parameters.yaml  dynaarm_status_broadcaster.cpp  dynaarm_status_broadcaster_parameters.yaml  force_torque_broadcaster.cpp  force_torque_broadcaster_parameters.yaml  freedrive_controller.cpp  freedrive_controller_parameters.yaml  freeze_controller.cpp  freeze_controller_parameters.yaml  gravity_compensation_controller.cpp  gravity_compensation_controller_parameters.yaml  safety_monitor_controller.cpp  safety_monitor_controller_parameters.yaml
duatic_dynaarm_driver/duatic_dynaarm_driver/: CMakeLists.txt  hardware_interface_plugin.xml  package.xml
duatic_dynaarm_driver/duatic_dynaarm_driver/config/arowana4/: elbow_flexion.yaml  forearm_rotation.yaml  shoulder_flexion.yaml  shoulder_rotation.yaml
duatic_dynaarm_driver/duatic_dynaarm_driver/config/baracuda12/: forearm_rotation.yaml  wrist_flexion.yaml  wrist_rotation.yaml
duatic_dynaarm_driver/duatic_dynaarm_driver/include/duatic_dynaarm_driver/: dynaarm_hardware_interface.hpp  dynaarm_mock_hardware_interface.hpp
duatic_dynaarm_driver/duatic_dynaarm_driver/src/: dynaarm_hardware_interface.cpp  dynaarm_mock_hardware_interface.cpp
duatic_dynaarm_driver/duatic_dynaarm_driver/urdf/: dynaarm.ros2control.xacro  dynaarm.urdf.xacro  dynaarm.xacro
duatic_dynaarm_driver/duatic_dynaarm_hardware_interface_base/: CMakeLists.txt  package.xml
duatic_dynaarm_driver/duatic_dynaarm_hardware_interface_base/include/duatic_dynaarm_hardware_interface_base/: command_translator.hpp  dynaarm_hardware_interface_base.hpp  string_utils.hpp  types.hpp
duatic_dynaarm_driver/duatic_dynaarm_hardware_interface_base/src/: dynaarm_hardware_interface_base.cpp
duatic_dynaarm_extensions/: package.xml  setup.cfg  setup.py
duatic_dynaarm_extensions/duatic_dynaarm_extensions/duatic_helpers/: duatic_controller_helper.py  duatic_jtc_helper.py  duatic_marker_helper.py  duatic_param_helper.py  duatic_pinocchio_helper.py  duatic_robots_helper.py
duatic_dynaarm_extensions/duatic_dynaarm_extensions/e_stop/: e_stop_node.py
duatic_dynaarm_extensions/duatic_dynaarm_extensions/move_to_predefined_position/: move_to_predefined_position_node.py
duatic_dynaarm_extensions/test/: test_dummy.py
duatic_dynaarm_msgs/: CMakeLists.txt  package.xml
duatic_dynaarm_msgs/msg/: ArmState.msg  DriveState.msg  GravityCompensationControllerStatus.msg  MeasuredTorques.msg
dynaarm_controllers/include/dynaarm_controllers/: exceptions.hpp  ros2_control_compat.hpp
dynaarm_controllers/src/: cartesian_pose_controller.cpp  dynaarm_pid_tuner.cpp  dynaarm_status_broadcaster.cpp  freedrive_controller.cpp  gravity_compensation_controller.cpp
dynaarm_driver/dynaarm_driver/: package.xml
dynaarm_driver/dynaarm_driver/config/baracuda12/: elbow_flexion.yaml  shoulder_flexion.yaml  shoulder_rotation.yaml
dynaarm_driver/dynaarm_driver/include/dynaarm_driver/: dynaarm_hardware_interface.hpp
dynaarm_driver/dynaarm_hardware_interface_base/include/dynaarm_hardware_interface_base/: dynaarm_hardware_interface_base.hpp
dynaarm_driver/dynaarm_hardware_interface_base/src/: dynaarm_hardware_interface_base.cpp
dynaarm_extensions/dynaarm_extensions/duatic_helpers/: duatic_controller_helper.py  duatic_jtc_helper.py
dynaarm_extensions/dynaarm_extensions/move_to_predefined_position/: move_to_predefined_position_node.py
