<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>duatic_dynaarm_controllers</name>
  <version>1.0.0</version>
  <description>This packages contains controllers for the dynaarm</description>

  <license>BSD 3-Clause</license>

  <author email="jpreisig@duatic.com">Jan Preisig</author>
  <author email="lnachtigall@duatic.com">Lennart Nachtigall</author>
  <author email="tschwarzer@duatic.com">Timo Schwarzer</author>

  <maintainer email="tschwarzer@duatic.com">Timo Schwarzer</maintainer>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>std_srvs</depend>
  <depend>controller_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>rcutils</depend>
  <depend>eigen</depend>
  <depend>eigen3_cmake_module</depend>
  <depend>pinocchio</depend>
  <depend>generate_parameter_library</depend>
  <depend>realtime_tools</depend>
  <depend>hardware_interface</depend>
  <depend>duatic_dynaarm_msgs</depend>
  <depend>pal_statistics_msgs</depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
