<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>duatic_dynaarm_hardware_interface_base</name>
  <version>1.0.0</version>
  <description>The hardware interface base stuff for the dynaarm</description>

  <license>BSD 3-Clause</license>

  <author email="jpreisig@duatic.com">Jan Preisig</author>
  <author email="lnachtigall@duatic.com">Lennart Nachtigall</author>
  <author email="tschwarzer@duatic.com">Timo Schwarzer</author>

  <maintainer email="tschwarzer@duatic.com">Timo Schwarzer</maintainer>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>pluginlib</depend>

  <depend>hardware_interface</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
